# EMAIL-FILTER

./: .gitignore  README.md
apps/: README.md
apps/server/: .env.example  README.md  pyproject.toml
apps/server/app/: main.py
apps/server/app/api/routes/: health.py
apps/server/app/core/: config.py
apps/server/app/integrations/google/: __init__.py  oauth_config.py  oauth_models.py  oauth_scopes.py  oauth_state.py  oauth_urls.py
apps/server/app/integrations/google/repositories/: __init__.py  oauth_state_postgres.py
apps/server/tests/: test_health.py  test_oauth_config.py
apps/server/tests/integrations/google/: test_oauth_models.py  test_oauth_state.py
apps/web/: .prettierignore  README.md  package-lock.json  package.json
apps/web/src/app/: page.tsx
apps/web/src/app/health/: page.tsx
apps/web/tests/: foundation.test.tsx
apps/worker/: README.md
docs/: EMAIL_FILTER_SPECIFICATION.md  GOOGLE_OAUTH_CONTRACTS.md  IMPLEMENTATION_PLAN.md
scripts/: README.md
supabase/: README.md
supabase/migrations/: 20260623135819_create_profiles.sql  20260623225810_create_gmail_connections.sql  20260624120000_create_google_oauth_states.sql  README.md
supabase/tests/: README.md  gmail_connections_rls_validation.sql  google_oauth_states_validation.sql  profiles_rls_validation.sql
